fix: lottie block align center in editor

--- a/src/blocks/blocks/lottie/editor.scss
+++ b/src/blocks/blocks/lottie/editor.scss
@@ -6,6 +6,14 @@
 	}
 }
 
+.wp-block[data-align="center"] {
+	lottie-player {
+		display: block;
+		text-align: center;
+		margin: 0 auto;
+	}
+}
+
 .wp-block-themeisle-blocks-lottie-modal {
 	.components-modal__frame {
 		width: 360px;
